--- a/src/components/pages/Home/Onboarding/Main.module.css
+++ b/src/components/pages/Home/Onboarding/Main.module.css
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  height: 50rem;
+  height: 55rem;
   overflow: hidden;
 }
 
